--- a/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/Contact.cshtml
+++ b/050_ProyectoLoginRegistroMVC5-master/PRUEBAS_LOGIN/Views/Home/Contact.cshtml
@@ -111,6 +111,7 @@
                         <th>Precio de Venta</th>
                         <th>Fecha de Venta</th>
                         <th>Cantidad</th>
+                        <th>Usuario Que Realizo La Venta</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
@@ -132,6 +133,23 @@
                 <tbody></tbody>
             </table>
         </div>
+
+        <div class="container">
+            <h1>Historial de compras</h1>
+            <table class="table" id="tablaVentasPorCliente">
+                <thead>
+                    <tr>
+                        <th>Cliente</th>
+                        <th>Vehículo</th>
+                        <th>Fecha de Venta</th>
+                        <th>Precio de Venta</th>
+                        <th>Cantidad</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+
 
 
         <script src="/Content/images/site.js"></script>
